# yas-scoop

./: CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  EULA.md  Makefile  README.md
assets/: featured.json
qml/: Main.qml
src/: main.cpp  scoopadapter.cpp  scoopadapter.h
tests/: CMakeLists.txt  tst_scoopadapter.cpp
